--- a/users/templates/users/top_players.html
+++ b/users/templates/users/top_players.html
@@ -1,7 +1,7 @@
 {% extends "users/base.html" %}
 {% load static %}
 {% load humanize %}
-{% load multiply  %}
+{% load i18n %}
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'casino/assets/profile.css' %}">
@@ -9,7 +9,7 @@
 
 {% block content %}
     <div class="status_bar">
-        <p>Всего юзеров: <span>{{count}}</span></p>
+        <p>{% trans "Total_users" %}: <span>{{count}}</span></p>
         <!-- <img src="assets/img/dimond.svg" alt=""> -->
         <svg width="59" height="75" viewBox="0 0 40 75" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g opacity="0.4" filter="url(#filter0_f_0_43)">
@@ -161,7 +161,7 @@
                                 style="color: #CD7F32;"
                                 {% else %}
                                 {% endif %}>
-                                <span>{{forloop.counter}}</span> Место</p>
+                                <span>{{forloop.counter}}</span> {% trans "Place" %}</p>
                             </div>
                             <div class="status_bar" style="margin-left: auto; font-size: 16px;">
                                 <span>${{player.total_bet}}</span>
